--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,11 +28,18 @@ android {
 }
 
 dependencies {
+    def work_version = "2.7.1"
+    def core_version = "1.6.0"
 
-    implementation 'androidx.appcompat:appcompat:1.3.0'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+    implementation 'androidx.appcompat:appcompat:1.4.2'
+    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+
+    implementation "androidx.work:work-runtime:$work_version"
+    implementation "androidx.core:core:$core_version"
+
+    implementation 'androidx.hilt:hilt-work:1.0.0'
 }
